judger/judger_cpp/tmp/50b4f694-aadd-4aaa-9647-c22dc18fa3c2txt
c:\Users\haohan\Desktop\myoj\judger\judger_cpp\tmp\5c0e4969-c4b1-43e6-8980-e6cfffb70ba7.cpp:1:1: error: 'ff' does not name a type
 ff
 ^
